nav bar edit as responsive

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
  <header>
   <a href="index.html" class="logo">Art Gallery</a>
   <nav class="nav-bar">
-   <ul>
+   <ul class="nav-link">
     <li><a href="index.html">Home</a></li>
     <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
     <li><a href="about.html" class="link-btn">About Us</a></li>
