--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
  <header>
   <a href="index.html" class="logo">Art Gallery</a>
   <nav class="nav-bar">
-   <ul>
+   <ul class="nav-link">
     <li><a href="#">Home</a></li>
     <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
     <li><a href="about.html" class="link-btn">About Us</a></li>
-    <li><a href="contact.html" class="link-btn">Contact Us</a></li>
-   </ul>
-   <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
+    <li><a href="contact.html" class="link-btn">Contact Us</a></li> 
+   <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </nav>
  </header>
  <!-- section 1 banner -->
