--- a/category-wator-color.html
+++ b/category-wator-color.html
@@ -22,7 +22,7 @@
   <header>
     <a href="index.html" class="logo">Art Gallery</a>
     <nav class="nav-bar">
-      <ul>
+      <ul class="nav-link">
         <li><a href="index.html">Home</a></li>
         <li><a href="gallery.html">Photo Gallery</a></li>
         <li><a href="about.html">About Us</a></li>
