Fix issue with nav for mobile version on different pages

--- a/about.html
+++ b/about.html
@@ -25,9 +25,14 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
     <li><a href="about.html" class="link-btn">About Us</a></li>
-    <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+    <li><a href="contact.html" class="link-btn">Contact Us</a></li>  
+    <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
    </ul>
-   <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
+      <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
   </nav>
  </header>
  <!-- End of Common Header-->
@@ -114,6 +119,7 @@
   });
  </script>
  <script type="module" src="./js/submenu.js"></script>
+ <script type="text/javascript" src="./js/index.js"></script>
  <!-- End of Common Footer-->
 </body>
 
