--- a/gallery.html
+++ b/gallery.html
@@ -41,14 +41,21 @@
           <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
           <li><a href="about.html" class="link-btn">About Us</a></li>
           <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+          <li>
+            <a href="login.html"
+              ><button type="button" class="login-btn">Admin Login</button></a
+            >
+          </li>
         </ul>
-        <a href="login.html"
-          ><button type="button" class="login-btn">Admin Login</button></a
-        >
+        <div class="burger toggle">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </nav>
     </header>
 
-    <main>
+    <main class="hero">
       <!-- Section 1 - Introduction -->
       <section class="gallery-hero-image-wrapper">
         <div class="gallery-hero-image">
@@ -157,7 +164,8 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="./js/index.js"></script>
+
     <script type="module" src="./js/submenu.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
