--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li><a href="contact.html" class="link-btn">Contact Us</a></li> 
    <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
     </ul>
-    <div class="burger">
+    <div class="burger toggle">
       <div class="line1"></div>
       <div class="line2"></div>
       <div class="line3"></div>
