--- a/category-wator-color.html
+++ b/category-wator-color.html
@@ -27,11 +27,17 @@
         <li><a href="gallery.html">Photo Gallery</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-      <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
+       <li>   
+       <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
+       </ul>
+         <div class="burger toggle">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
     </nav>
   </header>
-  <div class="container hero">
+  <section class="container hero">
     <h1>Watercolor</h1>
     <div class="wrapper">
       <div class="image-item">
@@ -80,10 +86,11 @@
           width="600" height="600" alt="">
       </div>
     </div>
-  </div>
+  </section>
 
   <aside class="submenu">
   </aside>
+  
   <footer>
     <div class="container">
       <a href="index.html" class="logo">Art Gallery</a>
@@ -105,6 +112,7 @@
   </footer>
 
   <script type="module" src="./js/submenu.js"></script>
+   <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
