--- a/category-oilpainting.html
+++ b/category-oilpainting.html
@@ -27,8 +27,12 @@
         <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
         <li><a href="about.html" class="link-btn">About Us</a></li>
         <li><a href="contact.html" class="link-btn">Contact Us</a></li>
-      </ul>
-      <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a>
+        <li> <a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
+        </ul>
+         <div class="burger toggle">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div> 
     </nav>
   </header>
   <section>
