Add sports category for gallery list.

--- a/gallery.html
+++ b/gallery.html
@@ -112,7 +112,7 @@
             </div>
             <div class="column">
               <div class="gallery-column-content">
-                <a name="Sport" href="#">
+                <a name="Sport" href="category-sports.html">
                   <img src="/images/gallery-sport.jpg" alt="Sport" />
                 </a>
                 <h5>Sport</h5>
