fix sports page console error

--- a/category-sports.html
+++ b/category-sports.html
@@ -11,9 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
   <link rel="stylesheet" type="text/css" href="./css/category-oilpainting.css">
-  <link rel="stylesheet" href="css/submenu.css">
-  <link rel="stylesheet" href="css/sports.css">
+  <link rel="stylesheet" href="css/submenu.css">  
   <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/sports.css">
   <title>Photo Gallery</title>
 </head>
 
@@ -38,7 +38,7 @@
          </div>
     </nav>
   </header>
-  <section class="sports-section">
+  <section class="sports-section hero">
      <div class="sports-container">
 	  <div class="top">
     	<ul>
@@ -99,7 +99,7 @@
       </div>
     </div>
   </footer>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
   <script type="module" src="./js/submenu.js"></script>
    </body>
    </html>
