--- a/category-sports.html
+++ b/category-sports.html
@@ -99,7 +99,7 @@
       </div>
     </div>
   </footer>
-    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
+    <script type="text/javascript" src="./js/index.js"></script> 
   <script type="module" src="./js/submenu.js"></script>
    </body>
    </html>
