fix oilpainting page submenu bug

--- a/category-oilpainting.html
+++ b/category-oilpainting.html
@@ -35,7 +35,7 @@
             <div class="line3"></div> 
     </nav>
   </header>
-  <section>
+  <section class="hero">
     <div class="imgBox"><img
         src="https://media.overstockart.com/optimized/cache/data/product_images/MON1239-1000x1000.jpg" target="imgBox"
         width="1200" height="700">
