--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
          <label for="psw"><b>Password</b></label>
          <input type="password" placeholder="Enter Password" name="psw" required>
 
-         <a href="admin-main.html"><button type="button" class="loginbtn">Login</button></a>
+         <a href="admin-main1.html"><button type="button" class="loginbtn">Login</button></a>
          <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
          </label>
