--- a/signUp.html
+++ b/signUp.html
@@ -42,7 +42,7 @@
 
    <div class="clearfix">
     <button type="button" class="cancelbtn">Cancel</button>
-    <a href="admin-main.html"><button type="button" class="signupbtn">Sign Up</button></a>
+    <a href="admin-main1.html"><button type="button" class="signupbtn">Sign Up</button></a>
    </div>
   </div>
  </form>
