fix admin page bug

--- a/admin-category.html
+++ b/admin-category.html
@@ -45,7 +45,7 @@
         />
         <h4>Brenda</h4>
       </center>
-      <a href="admin-main.html"
+      <a href="admin-main1.html"
         ><i class="fa fa-image"></i><span>Photo List</span></a
       >
       <a href="admin-category.html"
