Corrected the people category overlay of images

--- a/gallery.html
+++ b/gallery.html
@@ -6,8 +6,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <!-- font-family: 'Raleway', sans-serif; great vibes -->
+    />    
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
       rel="stylesheet"
@@ -84,13 +83,14 @@
             <div class="column">
               <div class="gallery-column-content">
                 <a name="People" href="category-people.html">
-                  <img src="/images/gallery-people.jpg" alt="People" />
+                  <img src="/images/gallery-people.jpg" 
+                  alt="People" />
                 </a>
                 <h5>People</h5>
                 <p>Photo by Ekaterina Shakharova from Unsplash</p>
               </div>
             </div>
-            <div class="column">
+            <!-- <div class="column">
               <div class="gallery-column-content">
                 <a name="Nature" href="#">
                   <img src="/images/gallery-nature.jpg" alt="Nature" />
@@ -98,10 +98,10 @@
                 <h5>Nature</h5>
                 <p>Photo by Pixabay from Pexels</p>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
-            <div class="column">
+            <!-- <div class="column">
               <div class="gallery-column-content">
                 <a name="Music" href="#">
                   <img src="/images/gallery-music.jpg" alt="Music" />
@@ -109,11 +109,12 @@
                 <h5>Music</h5>
                 <p>Photo by Isabella Mendes from Pexels</p>
               </div>
-            </div>
+            </div> -->
             <div class="column">
               <div class="gallery-column-content">
                 <a name="Sport" href="category-sports.html">
-                  <img src="/images/gallery-sport.jpg" alt="Sport" />
+                  <img src="/images/gallery-sport.jpg" 
+                  alt="Sport" />
                 </a>
                 <h5>Sport</h5>
                 <p>Photo by Binyamin Mellish from Pexels</p>
@@ -122,7 +123,8 @@
             <div class="column">
               <div class="gallery-column-content">
                 <a name="Watercolor" href="category-wator-color.html">
-                  <img src="/images/gallery-watercolor.jpg" alt="Watercolor" />
+                  <img src="/images/gallery-watercolor.jpg" 
+                  alt="Watercolor" />
                 </a>
                 <h5>Watercolor</h5>
                 <p>Photo by Steve Johnson from Pexels</p>
