--- a/category-people.html
+++ b/category-people.html
@@ -40,13 +40,16 @@
           <li><a href="#">Home</a></li>
           <li><a href="gallery.html" class="link-btn">Photo Gallery</a></li>
           <li><a href="about.html" class="link-btn">About Us</a></li>
-          <li><a href="contact.html" class="link-btn">Contact Us</a></li>
+          <li><a href="contact.html" class="link-btn">Contact Us</a></li> 
+          <li><a href="login.html"><button type="button" class="login-btn">Admin Login</button></a></li>
         </ul>
-        <a href="login.html"
-          ><button type="button" class="login-btn">Admin Login</button></a
-        >
+        <div class="burger toggle">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </nav>
-    </header>
+     </header>
 
     <main>
       <!-- Section - Introduction -->
@@ -64,13 +67,9 @@
       <!-- Section - Filters -->
       <section class="gallery-Filters">
         <div id="categoryBtnContainer">
-          <button class="btn active" onclick="filterCategory('all')">
-            People
-          </button>
+          <button class="btn active" onclick="filterCategory('all')">People</button>
           <button class="btn" onclick="filterCategory('family')">Family</button>
-          <button class="btn" onclick="filterCategory('friends')">
-            Friends
-          </button>
+          <button class="btn" onclick="filterCategory('friends')">Friends</button>
           <button class="btn" onclick="filterCategory('couple')">Couple</button>
           <button class="btn" onclick="filterCategory('love')">Love</button>
         </div>
@@ -80,141 +79,134 @@
       <section class="gallery-collection">
         <div class="gallery-wrapper">
           <div class="image-row">
-            <div class="image-column family">
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-1.jpg"
-                    alt="Photo by Daria Shevtsova from Pexels"
-                  />
-                </a>
+            <div class="image-column family">  
+              <div class="image-container">                
+                <img                  
+                  src="/images/people-category-1.jpg"
+                  alt="Photo by Daria Shevtsova from Pexels"
+                  class="imageThumbnail"                  
+                />                                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-2.jpg"
-                    alt="Photo by Robert Stokoe from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-2.jpg"
+                  alt="Photo by Robert Stokoe from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-3.jpg"
-                    alt="Photo by Nicholas Githiri from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-3.jpg"
+                  alt="Photo by Nicholas Githiri from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-1.jpg"
-                    alt="Photo by Daria Shevtsova from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-1.jpg"
+                  alt="Photo by Daria Shevtsova from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
             </div>
+
             <div class="image-column friends">
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-3.jpg"
-                    alt="Photo by Nicholas Githiri from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-3.jpg"
+                  alt="Photo by Nicholas Githiri from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-5.jpg"
-                    alt="Photo by Yulianto Poitier from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-5.jpg"
+                  alt="Photo by Yulianto Poitier from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-4.jpg"
-                    alt="Photo by Migs Reyes from Pexels"
-                  />
-                </a>
+              <div class="image-container">               
+                <img
+                  src="/images/people-category-4.jpg"
+                  alt="Photo by Migs Reyes from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-8.jpg"
-                    alt="Photo by Jaime Reimer from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-8.jpg"
+                  alt="Photo by Jaime Reimer from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
             </div>
+
             <div class="image-column love">
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-4.jpg"
-                    alt="Photo by Migs Reyes from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-4.jpg"
+                  alt="Photo by Migs Reyes from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-6.jpg"
-                    alt="Photo by lehandross from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-6.jpg"
+                  alt="Photo by lehandross from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-10.jpg"
-                    alt="Photo by Taryn Elliott from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-10.jpg"
+                  alt="Photo by Taryn Elliott from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-12.jpg"
-                    alt="Photo by Flo Maderebner from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-12.jpg"
+                  alt="Photo by Flo Maderebner from Pexels"
+                  class="imageThumbnail"
+                />
               </div>
             </div>
+
             <div class="image-column couple">
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-8.jpg"
-                    alt="Photo by Jaime Reimer from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-8.jpg"
+                  alt="Photo by Jaime Reimer from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-7.jpg"
-                    alt="Photo by lehandross from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-7.jpg"
+                  alt="Photo by lehandross from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-11.jpg"
-                    alt="Photo by Andreas Wohlfahrt from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-11.jpg"
+                  alt="Photo by Andreas Wohlfahrt from Pexels"
+                  class="imageThumbnail"
+                />                
               </div>
-              <div class="image-container">
-                <a name="Oil Painting" href="category-oilpainting.html">
-                  <img
-                    src="/images/people-category-9.jpg"
-                    alt="Photo by cottonbro from Pexels"
-                  />
-                </a>
+              <div class="image-container">                
+                <img
+                  src="/images/people-category-9.jpg"
+                  alt="Photo by cottonbro from Pexels"
+                  class="imageThumbnail"
+                />
               </div>
+            </div>
+            <!-- Modal begins -->
+            <div class="modal">
+              <span class="modalClose">&times;</span>
+              <img class="modalImage"/>
+              <div class="modalCaption"></div>
             </div>
           </div>
         </div>
@@ -233,26 +225,28 @@
           </p>
         </div>
         <div class="footer-end">
-          <p>© 2018 Company. Privacy Policy | Terms & Conditions</p>
+          <p>&COPY; 2020 Company. Privacy Policy | Terms & Conditions</p>
         </div>
         <div class="social-icons">
-          <a href="https://www.facebook.com/"
-            ><i class="fab fa-facebook"></i>
+          <a href="https://www.facebook.com/">
+            <i class="fab fa-facebook"></i>
           </a>
-          <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-          <a href="https://twitter.com/?lang=en"
-            ><i class="fab fa-twitter"></i
-          ></a>
-          <a href="https://www.instagram.com/?hl=en"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://www.linkedin.com/"
-            ><i class="fab fa-linkedin"></i
-          ></a>
+          <a href="https://www.youtube.com/">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://twitter.com/?lang=en">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.instagram.com/?hl=en">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.linkedin.com/">
+            <i class="fab fa-linkedin"></i>
+          </a>
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="./js/index.js"></script>
+    <!-- <script type="text/javascript" src="./js/index.js"></script> -->
     <script type="module" src="./js/submenu.js"></script>
     <script src="./js/category-people.js"></script>
   </body>
